se termino el archivo de virtualización

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   <li>Facilita la adaptación a necesidades cambiantes y la gestión de recursos.</li>
                   <li>Reduce el impacto de fallas y amenazas de seguridad al operar sistemas en entornos aislados.</li>
                   <li>Centraliza el control y mantenimiento de sistemas y aplicaciones.</li>
-                  <li>Recuperación ante desastres: Mejora la disponibilidad y facilita la recuperación de sistemas.</li>
+                  <li>Mejora la disponibilidad y facilita la recuperación de sistemas.</li>
                 </ul>
                 
               </div>
